Add size and color manipulationfunctionalities

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       />
 
       <label for="color">Color:</label>
-      <input type="color" name="color" value="blue" />
+      <input id="change-color" type="color" name="color" value="blue" />
 
       <img src="pittaway.jpg" />
     </div>
