--- a/index.html
+++ b/index.html
@@ -27,74 +27,82 @@
   <body>
     <h2>Edit your image here: &#128522;</h2>
 
-    <div class="controls flex flex-column">
-      <label for="size">Border size:</label>
-      <input
-        id="slidersize"
-        type="range"
-        name="size"
-        min="0"
-        max="40"
-        data-size="px"
-      />
-    </div>
+    <div class="controls flex flex-column ma3">
+      <div class="flex justify-between">
+        <label for="size">Border size:</label>
+        <input
+          id="slidersize"
+          type="range"
+          name="size"
+          min="0"
+          max="40"
+          data-size="px"
+        />
+      </div>
 
-    <div>
-      <label for="blur">Blur:</label>
-      <input
-        id="sliderblur"
-        type="range"
-        name="blur"
-        min="0"
-        max="25"
-        data-size="px"
-      />
-    </div>
+      <div class="flex justify-between">
+        <label for="blur">Blur:</label>
+        <input
+          class="a"
+          id="sliderblur"
+          type="range"
+          name="blur"
+          min="0"
+          max="25"
+          data-size="px"
+        />
+      </div>
 
-    <div>
-      <label for="grayscale">Grayscale:</label>
-      <input
-        id="grayscale"
-        type="range"
-        name="grayscale"
-        min="0"
-        max="100"
-        data-size="%"
-      />
-    </div>
+      <div class="flex justify-between">
+        <label for="grayscale">Grayscale:</label>
+        <input
+          id="grayscale"
+          type="range"
+          name="grayscale"
+          min="0"
+          max="100"
+          data-size="%"
+        />
+      </div>
 
-    <div>
-      <label for="contrast">Contrast:</label>
-      <input
-        id="contrast"
-        type="range"
-        name="contrast"
-        min="40"
-        max="200"
-        data-size="%"
-      />
-    </div>
+      <div class="flex justify-between">
+        <label for="contrast">Contrast:</label>
+        <input
+          id="contrast"
+          type="range"
+          name="contrast"
+          min="40"
+          max="200"
+          data-size="%"
+        />
+      </div>
 
-    <div>
-      <label for="hue-rotate">Hue:</label>
-      <input
-        id="hue-rotate"
-        type="range"
-        name="hue-rotate"
-        min="0"
-        max="180"
-        data-size="deg"
-      />
-    </div>
+      <div class="flex justify-between">
+        <label for="hue-rotate">Hue:</label>
+        <input
+          id="hue-rotate"
+          type="range"
+          name="hue-rotate"
+          min="0"
+          max="180"
+          data-size="deg"
+        />
+      </div>
 
-    <div class="input-color-container">
-      <label for="color">Color:</label>
-      <input id="change-color" type="color" name="color" class="input-color" />
-    </div>
+      <div class="input-color-container">
+        <label for="color">Color:</label>
+        <input
+          id="change-color"
+          type="color"
+          name="color"
+          class="input-color"
+        />
+      </div>
 
-    <div>
-      <img id="myImg" src="#" alt="" class="img-responsive" /> <br />
-      <input type="file" class="custom-file-input" />
+      <div>
+        <img id="myImg" src="#" alt="" class="img-responsive" /> <br />
+        <input type="file" class="custom-file-input" />
+      </div>
     </div>
 
     <script src="index.js"></script>
