Add autocomplete off to inputs

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               min="0"
               max="40"
               data-size="px"
+              autocomplete="off"
             />
           </div>
 
@@ -53,6 +54,7 @@
               min="0"
               max="25"
               data-size="px"
+              autocomplete="off"
             />
           </div>
 
@@ -66,6 +68,7 @@
               min="0"
               max="100"
               data-size="%"
+              autocomplete="off"
             />
           </div>
 
@@ -79,6 +82,7 @@
               min="40"
               max="200"
               data-size="%"
+              autocomplete="off"
             />
           </div>
 
@@ -92,6 +96,7 @@
               min="0"
               max="180"
               data-size="deg"
+              autocomplete="off"
             />
           </div>
 
@@ -103,13 +108,14 @@
               type="color"
               name="color"
               class="input-color"
+              autocomplete="off"
             />
           </div>
         </div>
 
         <div class="mw-100">
           <p class="tc">
-            <input type="file" />
+            <input type="file" autocomplete="off" />
           </p>
           <p class="w-100 tc">
             <img class="mw-80" id="user-img" src="#" alt="" />
