Enable border size input only if user selects a color

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               max="40"
               data-size="px"
               autocomplete="off"
+              disabled="true"
             />
           </div>
 
