Add cursor pointer to inputs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="border-size">Border size:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="border-size"
               type="range"
               name="size"
@@ -48,7 +48,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="blur">Blur:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="blur"
               type="range"
               name="blur"
@@ -62,7 +62,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="grayscale">Grayscale:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="grayscale"
               type="range"
               name="grayscale"
@@ -76,7 +76,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="contrast">Contrast:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="contrast"
               type="range"
               name="contrast"
@@ -90,7 +90,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="hue-rotate">Hue:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="hue-rotate"
               type="range"
               name="hue-rotate"
@@ -104,7 +104,7 @@
           <div class="w-100 flex">
             <label class="w-30 tr" for="change-color">Color:&nbsp;</label>
             <input
-              class=""
+              class="pointer"
               id="change-color"
               type="color"
               name="color"
@@ -114,11 +114,12 @@
           </div>
         </div>
 
-        <div class="mw-100">
-          <p class="tc">
-            <input type="file" autocomplete="off" />
+        <div>
+          <p>
+            <input class="" type="file" autocomplete="off" class="pointer" />
           </p>
-          <p class="w-100 tc">
+
+          <p>
             <img class="mw-80" id="user-img" src="#" alt="" />
           </p>
         </div>
