--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
   </head>
 
   <body>
+    <header>
+      <a
+        target="_blank"
+        rel="noopener"
+        href="https://github.com/pricillaragao/image-filter"
+      >
+        <img src="GitHub-Mark-32px.png" alt="GitHub logo" />
+      </a>
+    </header>
+
     <main>
       <div class="flex flex-column justify-center items-center flex-gap-0">
         <h2 class="">Edit your image here: &#128522;</h2>
